@@ -1,3 +1,5 @@
+9.jul (ws)
+      - fix #6425: Crash loading score with breath mark selected
 5.jul  (la)
       - fix #6388: Crash on importing a MusicXML file (beam problem)
 3.jul  (ws)
